# pygr

./: .gitignore  .pre-commit-config.yaml  README.md  install-pygr.sh  installation_instructions.md  pygr.py  pyproject.toml  requirements-dev.txt  requirements.txt
tests/: __init__.py  conftest.py  test_cli.py  test_database.py  test_declarative_config.py  test_recipe.py  test_resolver.py  test_store.py  test_version_constraint.py
